homepage all products sections are now dynamic

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -69,34 +69,34 @@
             <div class="featured-product-container">
                 <div class="featured-product-content">
                     <h2>On Sale</h2>
-                    <a href="./html/products/product.html?id=12">
+                    <a id="sale-product-link">
                         <div class="featured-product">
-                            <img src="./images/product12.png" alt="On Sale Product">
+                            <img id="random-sale-product" alt="On Sale Product">
                         </div>
                     </a>
-                    <span><a href="./html/products/product.html?id=12">View Sale</a></span>
+                    <span><a id="see-sale-products"></a></span>
                 </div>
             </div>
             <div class="featured-product-container">
                 <div class="featured-product-content">
                     <h2>Highest Rating</h2>
-                    <a href="./html/products/product.html?id=14">
+                    <a id="high-rated-product-link">
                         <div class="featured-product">
-                            <img src="./images/product14.png" alt="Highest Rated Product">
+                            <img id="high-rated-product" alt="Highest Rated Product">
                         </div>
                     </a>
-                    <span><a href="./html/products/product.html?id=14">See More</a></span>
+                    <span><a id="see-high-rated-products"></a></span>
                 </div>
             </div>
             <div class="featured-product-container">
                 <div class="featured-product-content">
                     <h2>Under $20</h2>
-                    <a href="./html/products/product.html?id=16">
+                    <a id="cheap-product-link">
                         <div class="featured-product">
-                            <img src="./images/product16.png" alt="Under $20 Product">
+                            <img id="random-cheap-product" alt="Under $20 Product">
                         </div>
                     </a>
-                    <span><a href="./html/products/product.html?id=16">Shop Under $20</a></span>
+                    <span><a id="see-cheaper-products"></a></span>
                 </div>
             </div>
         </div>
