--- a/storefront-site/html/products/product.html
+++ b/storefront-site/html/products/product.html
@@ -78,8 +78,12 @@
                     </p>
                 </div>
                 <div class="grid-item">
-                    <button type="button" class="add-to-cart-button"><span class="material-icons">shopping_cart</span> Add to Cart</button>
+                    <a href = "../cart.html"><button type="button" class="add-to-cart-button"><span class="material-icons">shopping_cart</span> Add to Cart</button></a>
                     <a href="../confirmation.html"><button type="button" class="buy-now-button">Buy Now</button></a>
+
+                    <button id="add-to-cart-button">Add to Cart!</button>
+                    <p id="add-to-cart"></p>
+                    
                 </div>
             </div>
             <br>
@@ -130,6 +134,9 @@
         <div id="other-product-2"><a><img style="max-width: 128px; max-height: 128px;"></a></div>
     </template>
     <script src="../../scripts/render-product-listing.js"></script>
+    <script src="../../scripts/handle-add-to-cart.js" type = module></script>
+
+    
 </body>
 
 </html>
