Add more quantity selection and limit max quantity

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -120,6 +120,21 @@
                                     <option value="3">Qty: 3</option>
                                     <option value="4">Qty: 4</option>
                                     <option value="5">Qty: 5</option>
+                                    <option value="6">Qty: 6</option>
+                                    <option value="7">Qty: 7</option>
+                                    <option value="8">Qty: 8</option>
+                                    <option value="9">Qty: 9</option>
+                                    <option value="10">Qty: 10</option>
+                                    <option value="11">Qty: 11</option>
+                                    <option value="12">Qty: 12</option>
+                                    <option value="13">Qty: 13</option>
+                                    <option value="14">Qty: 14</option>
+                                    <option value="15">Qty: 15</option>
+                                    <option value="16">Qty: 16</option>
+                                    <option value="17">Qty: 17</option>
+                                    <option value="18">Qty: 18</option>
+                                    <option value="19">Qty: 19</option>
+                                    <option value="20">Qty: 20</option>
                                 </select>
                                 <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <span class="clickable-text cart-item-delete" style="font-size: 0.8em;">Delete</span>
                                 <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
