Reduce flicker on homepage

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -28,16 +28,21 @@
             <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
         </form>
         <nav class="header-nav">
-            <a href="./html/cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart (<span class="cart-total"></span>)</a>
-            <a href="./html/user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span> Preferences</a>
+            <a href="./html/cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart
+                (<span class="cart-total"></span>)</a>
+            <a href="./html/user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+                Preferences</a>
             <div class="header-login-dropdown">
                 <a href="./html/login.html" class="header-nav-link">Sign In ▼</a>
                 <nav class="header-login-dropdown-content">
                     <div>
                         <div class="header-login-dropdown-flex">
-                            <a href="./html/login.html">Sign In <span class="material-icons" style="font-size: 16px;">login</span></a>
-                            <a href="./html/register.html">Register <span class="material-icons" style="font-size: 16px;">person_add</span></a>
-                            <a href="./index.html">Log Out <span class="material-icons" style="font-size: 16px;">logout</span></a>
+                            <a href="./html/login.html">Sign In <span class="material-icons"
+                                    style="font-size: 16px;">login</span></a>
+                            <a href="./html/register.html">Register <span class="material-icons"
+                                    style="font-size: 16px;">person_add</span></a>
+                            <a href="./index.html">Log Out <span class="material-icons"
+                                    style="font-size: 16px;">logout</span></a>
                         </div>
                     </div>
                 </nav>
@@ -56,14 +61,14 @@
             <div class="featured-product-container">
                 <div class="featured-product-content">
                     <h2>Currently Popular</h2>
-                        <a id="popular-product-link">
-                            <div class="featured-product">
-                                    <img id="random-popular-product" alt="Currently Popular Product">
-                                </div>
-                            </a>
-                            <span>
-                                <a id="see-popular-products"></a>
-                        </span>
+                    <a id="popular-product-link">
+                        <div class="featured-product">
+                            <img id="random-popular-product" alt="Currently Popular Product" src="./images/white-square.png">
+                        </div>
+                    </a>
+                    <span>
+                        <a id="see-popular-products">See More</a>
+                    </span>
                 </div>
             </div>
             <div class="featured-product-container">
@@ -71,10 +76,12 @@
                     <h2>On Sale</h2>
                     <a id="sale-product-link">
                         <div class="featured-product">
-                            <img id="random-sale-product" alt="On Sale Product">
+                            <img id="random-sale-product" alt="On Sale Product" src="./images/white-square.png">
                         </div>
                     </a>
-                    <span><a id="see-sale-products"></a></span>
+                    <span>
+                        <a id="see-sale-products">View Sale</a>
+                    </span>
                 </div>
             </div>
             <div class="featured-product-container">
@@ -82,10 +89,12 @@
                     <h2>Highest Rating</h2>
                     <a id="high-rated-product-link">
                         <div class="featured-product">
-                            <img id="high-rated-product" alt="Highest Rated Product">
+                            <img id="high-rated-product" alt="Highest Rated Product" src="./images/white-square.png">
                         </div>
                     </a>
-                    <span><a id="see-high-rated-products"></a></span>
+                    <span>
+                        <a id="see-high-rated-products">Highest Rated</a>
+                    </span>
                 </div>
             </div>
             <div class="featured-product-container">
@@ -93,16 +102,18 @@
                     <h2>Under $20</h2>
                     <a id="cheap-product-link">
                         <div class="featured-product">
-                            <img id="random-cheap-product" alt="Under $20 Product">
+                            <img id="random-cheap-product" alt="Under $20 Product" src="./images/white-square.png">
                         </div>
                     </a>
-                    <span><a id="see-cheaper-products"></a></span>
+                    <span>
+                        <a id="see-cheaper-products">Shop Under $20</a>
+                    </span>
                 </div>
             </div>
         </div>
         <div class="outer-grid-product-listings">
             <h2>Browse our full selection of products</h2>
-            <div class="inner-grid-product-listings" id="product-grid"> 
+            <div class="inner-grid-product-listings" id="product-grid">
                 <template id="product-template">
                     <div>
                         <a>
@@ -113,7 +124,7 @@
                     </div>
                 </template>
             </div>
-        </div>  
+        </div>
     </main>
     <!-- BEGIN FOOTER -->
     <footer>
@@ -136,12 +147,15 @@
                 <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
                 <span class="footer-nav-content"><a href="tel:+1555-123-4567">+1 (555) 123-4567</a></span>
                 <span class="footer-nav-content">By Email:</span>
-                <span class="footer-nav-content"><a href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
+                <span class="footer-nav-content"><a
+                        href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Newsletter</b>
-                <a class="footer-nav-content" href="./html/user-preferences-change-email-subscription.html">Subscribe</a>
-                <a class="footer-nav-content" href="./html/user-preferences-change-email-subscription.html">Unsubscribe</a>
+                <a class="footer-nav-content"
+                    href="./html/user-preferences-change-email-subscription.html">Subscribe</a>
+                <a class="footer-nav-content"
+                    href="./html/user-preferences-change-email-subscription.html">Unsubscribe</a>
             </nav>
         </div>
         <hr>
