Reduce flicker on homepage

--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./styles/grid-featured-products.css">
     <link rel="stylesheet" href="./styles/grid-product-listings.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="preload" href="./images/banner-text.png" as="image">
+    <link rel="preload" href="./images/white-square.png" as="image">
 </head>
 
 <body>
